--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "galaxy-client",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Galaxy client application build system",
   "keywords": [
     "galaxy"
@@ -23,9 +23,11 @@
     "bootstrap-vue": "^2.0.0-rc.16",
     "d3": "3",
     "decode-uri-component": "^0.2.0",
+    "file-saver": "^2.0.2",
     "flush-promises": "^1.0.2",
     "font-awesome": "^4.7.0",
     "handsontable": "^2.0.0",
+    "html2canvas": "^1.0.0-rc.3",
     "imask": "^4.1.5",
     "imports-loader": "^0.8.0",
     "jquery": "2",
@@ -35,7 +37,7 @@
     "jquery.complexify": "^0.5.2",
     "jquery.cookie": "^1.4.1",
     "latex-parser": "^0.6.2",
-    "latex-to-unicode-converter": "^0.5.2",
+    "latex-to-unicode-converter": "0.5.2",
     "popper.js": "^1.14.7",
     "pyre-to-regexp": "^0.0.5",
     "raven-js": "^3.27.0",
